--- a/composer.json
+++ b/composer.json
@@ -1,15 +1,15 @@
 {
-  "name": "xiaoyangguang/aop",
+  "name": "gaoolp/aop",
   "type": "library",
   "license": "MIT",
   "require": {
-    "php": "~7.2",
+    "php": ">=7.2",
     "nikic/php-parser": "^4.13",
     "workerman/webman-framework": "^1.2.1"
   },
   "autoload": {
     "psr-4": {
-      "Xiaoyangguang\\Aop\\": "src"
+      "gaoolp\\Aop\\": "src"
     }
   }
 }
